--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-01-11  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/btf.pk (BTF_KIND_LAST): Define.
+	(BTF_Type): Add constraint to info.kind.
+
+2023-01-11  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.c (pkl_ast_print_1): Fix names in
 	PRINT_AST_SUBAST.
 
