--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -8800,7 +8800,7 @@ with the PVM.
 @menu
 * @:.vm disassemble::		PVM and native disassembler.
 * @:.vm profile::               Profiling Poke programs.
-* @:.vm dispatch                PVM dispatching strategy.
+* @:.vm dispatch::              PVM dispatching strategy.
 @end menu
 
 @node @:.vm disassemble
