--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-21  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Change version to 2.90.0.
+	* NEWS: Add entries for 2.90.0.
+
 2023-01-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pvm-val.c (pvm_sizeof): Add case for `PVM_NULL'.
