doc: Remove outdated HTML generation bug workarounds
These seds appear to have been working around bugs in older Texinfo
versions, however, on Texinfo 7.0 or later, all they do is break the
index page.

2023-01-17  Arsen Arsenović  <arsen@aarsen.me>

	* doc/Makefile.am (html-local): Remove outdated workaround for
	bug in older Texinfo versions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-17  Arsen Arsenović  <arsen@aarsen.me>
+
+	* doc/Makefile.am (html-local): Remove outdated workaround for bug
+	in older Texinfo versions.
+
 2023-01-17  Jose E. Marchesi  <jemarch@termi>
 
 	* libpoke/pkl-anal.c (pkl_anal_ps_default): Remove handler.
