--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -44,6 +44,14 @@ later version.
 @insertcopying
 @end ifnottex
 
+GNU poke is an interactive, extensible editor for binary data.  Not
+limited to editing basic entities such as bits and bytes, it provides
+a full-fledged procedural, interactive programming language designed
+to describe data structures and to operate on them.
+
+This manual describes the @code{poke} binary data editor as well as
+the Poke language.
+
 @menu
 Getting Started
 * Introduction::		Introducing GNU poke.
