--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-01-18  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm.jitter: Wrap pvm_free.
+
 2023-01-17  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pvm.jitter (FORMATF): Rename the macro to `PVM_FORMATF'
