--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-01-18  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* etc/pvm-wraps-whitelist: Add printf and rpl_printf.
+
+2023-01-18  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pvm.jitter: Wrap pvm_free.
 
 2023-01-17  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
