pk-repl: Redraw screen after displaying multi-word completion
It'd appear that, instead of only skipping displaying matches, providing
rl_completion_display_matches_hook also makes readline skip redrawing
the screen, leading to garbled contents.  This fixes completing the .doc
command.

See also:
https://git.sv.gnu.org/cgit/readline.git/tree/complete.c?h=readline-8.2#n1750

2023-01-19  Arsen Arsenović  <arsen@aarsen.me>

	* poke/pk-repl.c (space_substitute_display_matches): Force
	redisplay after displaying match list, to match GNU Readline
	behavior.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-01-19  Arsen Arsenović  <arsen@aarsen.me>
+
+	* poke/pk-repl.c (space_substitute_display_matches): Force
+	redisplay after displaying match list, to match GNU Readline
+	behavior.
+
 2023-01-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* poked/poked.c (VUCMD_*): Re-enumerate the view (vu) commands.
